--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-  "name":"𝐂𝐑𝐈𝐒𝐒 𝐕𝐌𝐃",
-  "description":"Best whatsapp bot developed by 𝐂𝐑𝐈𝐒𝐒 𝐕𝐄𝐕𝐎 ",
+  "name":"𝐊𝐈𝐁𝐎𝐑𝐄_𝐌𝐃",
+  "description":"Best whatsapp bot developed by 𝐊𝐈𝐁𝐎𝐑𝐄 𝐌𝐃 ",
   "keywords":["bot","node","baileys","whatsapp"],
-  "logo":"https://files.catbox.moe/hhwdau.jpeg",
-  "repository":"https://github.com/criss-vevo/CRISS-VMD",
+  "logo":"https://files.catbox.moe/t9jjm9.jpg",
+  "repository":https://github.com/deshallos1/KIBORE_MD",
   "succes_url":"/",
   "stack":"container",
   "env":{
@@ -41,14 +41,14 @@
     "BOT_NAME" : {
        
       "description":"put A name for your bot",
-      "value":"𝐂𝐑𝐈𝐒𝐒 𝐕𝐄𝐕𝐎",
+      "value":"𝐊𝐈𝐁𝐎𝐑𝐄_𝐌𝐃",
       "required":false
 
     } ,
      "BOT_MENU_LINKS" : {
     
       "description":"add one or many link for your bot menu  ; eg : url1,url2,url3.....",
-      "value":"https://files.catbox.moe/hhwdau.jpeg",
+      "value":"https://files.catbox.moe/t9jjm9.jpg",
       "required":false
        
      },
@@ -81,14 +81,14 @@
     
     "desc": "Your Name",
     "required": false,
-    "value": "CRISS VEVO"
+    "value": "KIBORE_MD"
   },
     "NUMERO_OWNER":
   {
     
     "desc": "Your number , dont put '+' and put you area code(exemple of togo '228')",
     "required":false,
-    "value": "255687068672"
+    "value": "255613300056"
   },
     "WARN_COUNT":
   {
